# baz

./: .clang-format  .clangd  CMakeLists.txt  README.md  main.cpp  makefile  scanner.cpp  token.h
examples/: enums.baz  expressions.baz  functions.baz  general_syntax.baz  invalid_types.baz  linked_list.baz  optionals.baz  returns.baz  simple.baz  smth.baz  structs.baz  tree_traversal.baz  tree_traversal_simple.baz  turing_machine.baz  type_checking.baz
src/: cpp_generator.cpp  cpp_generator.h  enum_variant.h  expr.cpp  expr.h  expr_visitor.h  main.cpp  parser.cpp  parser.h  resolver.cpp  resolver.h  scanner.cpp  scanner.h  stmt.cpp  stmt.h  stmt_visitor.h  token.cpp  token.h  type.cpp  type.h  type_checker.cpp  type_checker.h  typed_var.cpp  typed_var.h
src/ast/: enum_variant.h  expr.cpp  expr.h  expr_visitor.h  stmt.cpp  stmt.h  stmt_visitor.h  typed_var.cpp  typed_var.h
src/code_generator/: cpp_generator.cpp  cpp_generator.h
src/parser/: parser.cpp  parser.h
src/scanner/: scanner.cpp  scanner.h  token.cpp  token.h
src/type_checker/: resolver.cpp  resolver.h  type.cpp  type.h  type_checker.cpp  type_checker.h  type_environment.cpp  type_environment.h
test/: parser_test.cpp  parser_tests.cpp  scanner_mock.h  scanner_test.cpp  type_checker_test.cpp
test/test_cases/: for_missing_return.baz  if_missing_return.baz  match_missing_return.baz  missing_return.baz  nested_missing_return.baz  optional_type_checking_fail.baz  optional_type_checking_succeed.baz  reassign_wrong_type.baz  returns_no_val_when_void.baz  returns_success.baz  returns_val_when_void.baz  returns_wrong_type.baz  type_checking.baz  while_missing_return.baz
